# finn-c

./: .gitignore  LICENSE  README.md  grammar.txt  main.finn
src/: CMakeLists.txt  main.cpp
src/examples/: fibonacci.finn  hello.finn
src/lib/: compiler.hpp  errors.hpp  expr.hpp  lexer.hpp  parser.hpp  sema.hpp  token.hpp
